skins/desktop/skin.css
.tablehundred {
	width: 100%;
}

.info-box-fixed
{
    -webkit-box-flex:0;
    flex-grow: 0;
    flex-shrink:0;
}

.info-border-right {
    border-right: 1px solid #454545;
    padding-right:1em;
    max-width:240px;
}

.info-box-expand
{
    -webkit-box-flex:1.0;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: auto;

}

.info-detail-layout
{
    margin-top:8px;
}

.cleft {
    border-left: 1px solid #454545;
    padding-left:1em;
    margin-left:1em;
}

#infobar
{
    width:100%;
    height:100px;
    padding-top:4px;
    padding-bottom:4px;
    margin:0px;
    overflow-y:hidden;
    overflow-x:hidden;
}

.infobarlayout
{
    margin-right:12px;
    margin-top:0px;
    margin-bottom:0px;
    padding-top:0px;
    padding-bottom:2px;
    padding-left:0px;
    padding-right:0px;
    height:90px;
}

#albumcover
{
    padding-left:4px;
    padding-right:4px;
    padding-top:4px;
    padding-bottom:4px;
    margin:0px;
    height:82px;
    z-index:500;
}

#albumpicture
{
    width: auto;
    height: 82px;
}

#nowplaying
{
    font-size:8pt;
    padding-top:0px;
    padding-bottom:0px;
    white-space:nowrap;
    height:60px;
    width:100%;
}

@media screen and (min-height: 900px) and (max-height: 1039px) {
    #infobar {
        height:125px;
    }
    .infobarlayout {
        height:115px;
    }
    #albumcover {
        height: 107px;
        padding-right:6px;
    }
    #albumpicture {
        height: 107px;
    }
    #nowplaying {
        height: 85px;
    }
}

@media screen and (min-height: 1040px) {
    #infobar {
        height:150px;
    }
    .infobarlayout {
        height:140px;
    }
    #albumcover {
        height: 132px;
        padding-right:8px;
    }
    #albumpicture {
        height: 132px;
    }
    #nowplaying {
        height: 110px;
    }
}

#patrickmoore
{
    overflow:hidden;
}

#nptext
{
    width:auto;
}

#amontobin
{
    padding-top:4px;
}

#infopane
{
    height:100%;
    overflow:auto;
    position:relative;
    display:block;
}

.topstats
{
    float:left;
    margin-right:8px;
    margin-top:1px;
}

#lastfm
{
    float:left;
    margin-left:4px;
    padding-top:1px;
}

#lastfm img
{
    margin-right:2px;
    margin-left:2px;
}

.tag {
    margin-left:1.2em;
    margin-right:0;
}

.tagremover
{
    margin-left:0.5em;
}

#dbtags {
    overflow:hidden;
    opacity:0.9;
    font-size:8pt;
    height:22px;
    line-height:22px;
}

#playcount
{
    overflow:hidden;
    opacity:0.9;
    font-size:8pt;
    height:22px;
    line-height:22px;
}

.clicktext
{
    font-size:7pt;
    font-weight:bold;
}

.topimg
{
    margin-right:4px;
    margin-left:4px;
    height: 24px;
    width:24px;
    font-size:24px;
    margin-bottom:2px;
    cursor: pointer;
    vertical-align:middle;
}

.smallicon
{
    padding:0px;
    margin:4px;
    width:16px;
    height:16px;
    font-size:16px;
    vertical-align:middle;
}

.npicon
{
    padding:0px;
    margin-top:0px;
    margin-left:0px;
    margin-bottom:0px;
    margin-right:4px;
    height:20px;
    width:20px;
    font-size:20px;
    vertical-align:middle;
}

.medicon
{
    padding:0px;
    margin:2px;
    height:24px;
    width:24px;
    font-size:24px;
    vertical-align:middle;
}

.podicon
{
    padding:0px;
    margin:2px;
    height:16px;
    width:16px;
    font-size:16px;
    vertical-align:middle;
}

.playlisticon
{
    padding:0px;
    margin-right:4px;
    margin-bottom:2px;
    margin-top:2px;
    width:12px;
    height:12px;
    font-size:14px;
    vertical-align:middle;
}

.playlisticonr
{
    padding:0px;
    margin-left:4px;
    margin-right:2px;
    margin-bottom:2px;
    margin-top:2px;
    width:12px;
    height:12px;
    font-size:14px;
    vertical-align:middle;
}

.bigalarm
{
    width: 250px;
    height: 250px;
    font-size:250px;
}

/*-- Styles for drop-down menus --*/

div.topdrop
{
    margin:0;
    padding:0;
    float:left;
    position:relative;
}

div.topdropmenu
{
    z-index:1000;
    overflow-y:auto;
    overflow-x:hidden;
    display:none;
    position: absolute;
    opacity:1;
    padding:6px;
}

div.normalmenu
{
    width:200px;
}

div.widemenu
{
    width:380px;
}

div.leftmenu
{
    top: 30px;
    left: 0px;
}

div.rightmenu.widemenu
{
    top:30px;
    left:-366px;
}

div.rightmenu.normalmenu
{
    top:30px;
    left:-188px;
}

.rating-icon-big
{
    height: 20px;
    width: 100px;
    font-size:20px;
    cursor: pointer;
    vertical-align:middle;
}

.rating-icon-small
{
    height: 14px;
    width: 70px;
    font-size:14px;
    cursor: pointer;
    vertical-align:middle;
}

#headerbar
{
    padding:0px;
    margin:0px;
    width:100%;
    height:40px;
}

.column
{
    width:22%;
}

.cmiddle
{
    width:56%;
}

.headercontainer
{
    max-height:36px;
}

#bottompage
{
    width:100%;
    height:80%;
}

#sources
{
    height:100%;
    overflow:auto;
}

#progress
{
    cursor:pointer;
    font-size:6pt;
}

#playbackTime
{
    font-weight:bold;
    font-size:11px;
    padding-top:1px;
    height:15px;
    line-height:15px;
    text-align:center;
    width:100%;
}

#volumecontrol
{
    width:12px;
    height:100%;
    margin-left:0px;
    margin-right:0px;
    font-size:8px;
}

#notifications
{
    position:absolute;
    width:300px;
    padding:8px;
    opacity:0.7;
    top:0px;
    display:none;
    z-index:2000;
}

.menuitem
{
    font-weight:bold;
    margin:0px;
    padding-left:8px;
    padding-right:0px;
    padding-top:2px;
    padding-bottom:2px;
    -webkit-box-align:center;
    align-items: center;
}

.playlistalbum
{
    font-weight:bold;
    margin:0px;
    padding-left:4px;
    padding-right:0px;
    padding-top:2px;
    padding-bottom:2px;
    -webkit-box-align:stretch;
    align-items: stretch;
}

.mh
{
    margin-right:6px;
    display:block;
    margin-top:2px;
    margin-bottom:2px;
}

.menu
{
    width:14px;
    height: 14px;
    vertical-align:middle;
    cursor:pointer;
}

.ninesix
{
    font-size:96%;
    padding-top:2px;
}

.indent
{
    margin-left:24px;
}

.padright
{
    padding-right:4px;
}

.multidrop
{
    margin-top:4px;
    margin-bottom:4px;
}

#keybindtable
{
    margin-bottom:1em;
}

.buttonchange
{
    text-align:center;
}

